[package]
name = "plant-fast-unstake"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME fast unstake pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

topsoil-support = { workspace = true }
topsoil-system = { workspace = true }

plant-election-provider = { workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }

docify = { workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }
plant-staking = { workspace = true, default-features = true }
plant-staking-macros = { workspace = true, default-features = true }
plant-timestamp = { workspace = true, default-features = true }
subsoil = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking/std",
	"plant-election-provider/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"plant-balances/std",
	"plant-staking/std",
	"plant-timestamp/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"plant-election-provider/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"plant-staking/runtime-benchmarks",
	"plant-timestamp/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"plant-election-provider/try-runtime",
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"plant-balances/try-runtime",
	"plant-staking/try-runtime",
	"plant-timestamp/try-runtime",
	"subsoil/try-runtime",
]
