[package]
name = "plant-insecure-randomness-collective-flip"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Insecure do not use in production: FRAME randomness collective flip pallet"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil = { workspace = true, features = ["runtime"] }
safe-mix = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil/std",
	"safe-mix/std",
	"scale-info/std",
]
try-runtime = [
	"topsoil/try-runtime",
]
