[package]
name = "plant-lottery"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME Participation Lottery Pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
topsoil-support-test = { workspace = true }
topsoil-balances = { workspace = true, default-features = true }
subsoil = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support-test/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"topsoil-balances/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support-test/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"topsoil-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-support-test/try-runtime",
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"topsoil-balances/try-runtime",
	"subsoil/try-runtime",
]
