[package]
name = "plant-lottery"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME Participation Lottery Pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
topsoil-test-support = { workspace = true }
plant-balances = { workspace = true, default-features = true }
subsoil = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-test-support/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"plant-balances/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-test-support/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-test-support/try-runtime",
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"plant-balances/try-runtime",
	"subsoil/try-runtime",
]
