[package]
authors.workspace = true
edition.workspace = true
name = "plant-message-queue"
version = "0.0.0-dev"
publish = false
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet to queue and process messages"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
environmental = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { optional = true, features = ["derive"], workspace = true, default-features = true }

subsoil = { workspace = true }

topsoil-benchmarking = { optional = true, workspace = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }

[dev-dependencies]
topsoil-support = { workspace = true, features = ["experimental"] }
rand = { workspace = true, default-features = true }
rand_distr = { workspace = true }
subsoil-crypto-hashing = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"subsoil/try-runtime",
]
