[package]
authors.workspace = true
edition.workspace = true
name = "plant-message-queue"
version = "0.0.0-dev"
publish = false
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet to queue and process messages"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
environmental = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { optional = true, features = ["derive"], workspace = true, default-features = true }

subsoil = { workspace = true }

topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true, features = ["experimental"] }

[dev-dependencies]
rand = { workspace = true, default-features = true }
rand_distr = { workspace = true }
subsoil-crypto-hashing = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"log/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"subsoil/try-runtime",
]
