[package]
name = "plant-meta-tx"
description = "FRAME pallet enabling meta transactions."
license.workspace = true
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
docify = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { features = ["derive"], optional = true, workspace = true }

topsoil-benchmarking = { workspace = true, optional = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
topsoil-balances = { workspace = true, default-features = true }
topsoil-transaction-payment = { workspace = true, default-features = true }
plant-verify-signature = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"scale-info/std",
	"serde?/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"topsoil-balances/runtime-benchmarks",
	"topsoil-transaction-payment/runtime-benchmarks",
	"plant-verify-signature/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"topsoil-balances/try-runtime",
	"topsoil-transaction-payment/try-runtime",
	"plant-verify-signature/try-runtime",
	"subsoil/try-runtime",
]
