[package]
description = "FRAME's mixnet pallet"
name = "plant-mixnet"
version = "0.0.0-dev"
publish = false
license.workspace = true
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
homepage.workspace = true
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
subsoil = { workspace = true }
codec = { features = ["derive", "max-encoded-len"], workspace = true }
topsoil = { workspace = true, features = ["runtime"] }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"subsoil/std",
]
try-runtime = [
	"topsoil/try-runtime",
]
